# rust_project_invaders

./: .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  README.md
src/: invaders.rs  main.rs  player.rs  render.rs  shot.rs
